--- a/templates/components/common/breadcrumbs.html
+++ b/templates/components/common/breadcrumbs.html
@@ -1,8 +1,20 @@
 <ul class="breadcrumbs" itemscope itemtype="http://schema.org/BreadcrumbList">
-    {{#unless theme_settings.hide_breadcrumbs }}
-        {{#each breadcrumbs}}
-            <li class="breadcrumb {{#if @last}}is-active{{/if}}" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-                {{#or @last (if url "==" null)}}
+    {{#forEach breadcrumbs}}
+        {{#if total '>' 2}}
+            {{#unless isFirst}}
+                <li class="breadcrumb {{#if isLast}}is-active{{/if}}" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+                    {{#or isLast (if url "==" null)}}
+                        <meta itemprop="item" content="{{url}}">
+                        <span class="breadcrumb-label" itemprop="name">{{name}}</span>
+                    {{else}}
+                        <a href="{{url}}" class="breadcrumb-label" itemprop="item"><span itemprop="name">{{name}}</span></a>
+                    {{/or}}
+                    <meta itemprop="position" content="{{add @index 1}}" />
+                </li>
+            {{/unless}}
+        {{ else }}
+            <li class="breadcrumb {{#if isLast}}is-active{{/if}}" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+                {{#or isLast (if url "==" null)}}
                     <meta itemprop="item" content="{{url}}">
                     <span class="breadcrumb-label" itemprop="name">{{name}}</span>
                 {{else}}
@@ -10,6 +22,6 @@
                 {{/or}}
                 <meta itemprop="position" content="{{add @index 1}}" />
             </li>
-        {{/each}}
-    {{/unless}}
+        {{/if}}
+    {{/forEach}}
 </ul>
