Styling for homepage snippet

--- a/assets/scss/layouts/_layouts.scss
+++ b/assets/scss/layouts/_layouts.scss
@@ -36,6 +36,7 @@
 
 // Product grid
 @import "products/productGrid";
+@import "products/productGridSnippet";
 
 // Product list
 @import "products/productList";
