--- a/assets/scss/components/foundation/breadcrumbs/_breadcrumbs.scss
+++ b/assets/scss/components/foundation/breadcrumbs/_breadcrumbs.scss
@@ -14,9 +14,11 @@
 
 
 .breadcrumbs {
+    display: none;
     padding: stencilNumber("padding-small") * 2 0;
     border-bottom: solid 1px lightgray;
     border-top: solid 1px lightgray;
+    margin-top: stencilNumber("padding-small");
 }
 
 .breadcrumb {
