--- a/assets/scss/components/foundation/breadcrumbs/_breadcrumbs.scss
+++ b/assets/scss/components/foundation/breadcrumbs/_breadcrumbs.scss
@@ -18,7 +18,7 @@
     padding: stencilNumber("padding-small") * 2 0;
     border-bottom: solid 1px lightgray;
     border-top: solid 1px lightgray;
-    margin-top: stencilNumber("padding-small");
+    margin-top: 3px;
 }
 
 .breadcrumb {
