--- a/assets/scss/layouts/container/_container.scss
+++ b/assets/scss/layouts/container/_container.scss
@@ -3,21 +3,13 @@
 // =============================================================================
 
 
-.container {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: layout("max") + ($container-padding * 4);
-    padding: 0 $container-padding;
-    position: relative;
-    width: layout("fixed");
-
-    @include breakpoint("large") {
-        padding: 0 ($container-padding * 4);
-    }
+.row {
+    max-width: unset;
+    width: auto;
 }
 
 .grid-container {
-    padding: 0 40px 32px;
+    padding: 0 remCalc(40px) remCalc(32px);
     
     .product {
         .breadcrumbs {
@@ -26,6 +18,12 @@
             @include breakpoint("medium") {
                 display: block;
             }   
+        }
+        .container {
+            padding: 0 0 stencilNumber("padding-normal") * 2;
+            padding-left: stencilNumber("padding-normal") * 2 !important;
+            padding-right: stencilNumber("padding-normal") * 2 !important;
+            overflow-x: hidden;
         }
     }
 }
