--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -9,9 +9,10 @@
 // 1. Import Citadel's toolkit for use.
 //
 // -----------------------------------------------------------------------------
-
 @import "../../node_modules/@bigcommerce/citadel/dist/tools/toolkit"; // 1
 @import "tools/tools";
+@import "../../node_modules/bootstrap/scss/bootstrap-grid";
+
 
 // Settings
 // -----------------------------------------------------------------------------
@@ -44,6 +45,7 @@
 @import "settings/citadel/citadel"; // 4
 @import "settings/stencil/stencil"; // 4
 @import "settings/layouts/layouts"; // 4
+@import "../../node_modules/bootstrap/scss/grid";
 
 
 // Utilities
@@ -51,7 +53,7 @@
 
 @import "utilities/utilities";
 @import "../../node_modules/@bigcommerce/citadel/dist/utilities/utilities";
-
+@import "../../node_modules/@bigcommerce/citadel/dist/utilities/utilities";
 
 // Fonts
 // -----------------------------------------------------------------------------
@@ -71,7 +73,6 @@
 @import "../../node_modules/@bigcommerce/citadel/dist/vendor/normalize/normalize"; // 1
 @import "../../node_modules/@bigcommerce/citadel/dist/components/components"; // 2
 @import "components/components"; // 3
-
 
 // Layouts
 // -----------------------------------------------------------------------------
