--- a/assets/scss/components/foundation/breadcrumbs/_breadcrumbs.scss
+++ b/assets/scss/components/foundation/breadcrumbs/_breadcrumbs.scss
@@ -18,7 +18,8 @@
     padding: stencilNumber("padding-small") * 2 0;
     border-bottom: solid 1px lightgray;
     border-top: solid 1px lightgray;
-    margin-top: 3px;
+    margin: 3px 40px 20px;
+    width: 100%;
 }
 
 .breadcrumb {
