Update Product Main Layout

--- a/templates/components/common/breadcrumbs.html
+++ b/templates/components/common/breadcrumbs.html
@@ -1,4 +1,4 @@
-<ul class="breadcrumbs col-sm-12" itemscope itemtype="http://schema.org/BreadcrumbList">
+<ul class="breadcrumbs" itemscope itemtype="http://schema.org/BreadcrumbList">
     {{#forEach breadcrumbs}}
         {{#if total '>' 3}}
             {{#unless isLast}}
