--- a/templates/pages/product.html
+++ b/templates/pages/product.html
@@ -10,7 +10,7 @@ product:
         limit: {{theme_settings.productpage_similar_by_views_count}}
 ---
 {{#partial "page"}}
-    <main class="product container-fluid">
+    <main class="pdp container-fluid">
         <div class="row">
             {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
         </div>
