--- a/templates/components/products/options/swatch.html
+++ b/templates/components/products/options/swatch.html
@@ -1,31 +1,28 @@
-<div class="form-field" data-product-attribute="swatch">
-    <label class="form-label form-label--alternate form-label--inlineSmall">
-        {{this.display_name}}:
-        <span data-option-value></span>
-    </label>
-
+<div class="form-field" data-product-attribute="swatch"
+    {{#if this.display_name '===' 'Color'}} data-class="color-swatch"{{/if}}
+>
     {{#each this.values}}
         <input class="form-radio" type="radio" name="attribute[{{../id}}]" value="{{id}}" id="attribute_swatch_{{../id}}_{{id}}" {{#if selected}}checked data-default{{/if}} {{#if ../required}}required{{/if}}>
-        <label class="form-option form-option-swatch" for="attribute_swatch_{{../id}}_{{id}}" data-product-attribute-value="{{id}}">
+        <label class="variant-option-swatch" for="attribute_swatch_{{../id}}_{{id}}" data-product-attribute-value="{{id}}">
             {{#if image}}
-                <span class='form-option-variant form-option-variant--pattern' title="{{this.label}}" style="background-image: url('{{getImage image "swatch_option_size"}}');"></span>
+                <img class='option-variant--pattern' src='{{getImage image "default_size"}}' />
             {{/if}}
             {{#if data.[2]}}
-                <span class='form-option-variant form-option-variant--color' title="{{this.label}}" style="background-color: #{{data.[0]}}"></span>
-                <span class='form-option-variant form-option-variant--color' title="{{this.label}}" style="background-color: #{{data.[1]}}"></span>
-                <span class='form-option-variant form-option-variant--color' title="{{this.label}}" style="background-color: #{{data.[2]}}"></span>
+                <span class='option-variant--color' title="{{this.label}}" style="background-color: #{{data.[0]}}"></span>
+                <span class='option-variant--color' title="{{this.label}}" style="background-color: #{{data.[1]}}"></span>
+                <span class='option-variant--color' title="{{this.label}}" style="background-color: #{{data.[2]}}"></span>
             {{else}}
                 {{#if data.[1]}}
-                    <span class='form-option-variant form-option-variant--color' title="{{this.label}}" style="background-color: #{{data.[0]}}"></span>
-                    <span class='form-option-variant form-option-variant--color' title="{{this.label}}" style="background-color: #{{data.[1]}}"></span>
+                    <span class='option-variant--color' title="{{this.label}}" style="background-color: #{{data.[0]}}"></span>
+                    <span class='option-variant--color' title="{{this.label}}" style="background-color: #{{data.[1]}}"></span>
                 {{else}}
                     {{#if data.[0]}}
-                        <span class='form-option-variant form-option-variant--color' title="{{this.label}}" style="background-color: #{{data.[0]}}"></span>
+                        <span class='option-variant--color' title="{{this.label}}" style="background-color: #{{data.[0]}}"></span>
                     {{/if}}
                 {{/if}}
             {{/if}}
             {{#if pattern}}
-                <span class="form-option-expandeds">
+                <span class="variant-option-expandeds">
                     {{this.label}}
                 </span>
             {{/if}}
