--- a/templates/components/products/options/set-rectangle.html
+++ b/templates/components/products/options/set-rectangle.html
@@ -1,7 +1,6 @@
 <div class="form-field" data-product-attribute="set-rectangle" data-sku="{{id}}">
-    <label class="form-label form-label--alternate form-label--inlineSmall">
+    <label class="label--alternate">
         {{this.display_name}}:
-        <span data-option-value></span>
     </label>
     
     {{#each this.values}}
@@ -17,8 +16,8 @@
                 data-default
             {{/if}}
             {{#if ../required}}required{{/if}}>
-        <label class="form-option" for="attribute_rectangle__{{../id}}_{{id}}" data-product-attribute-value="{{id}}">
-            <span class="form-option-variant">{{this.label}}</span>
+        <label class="variant-option" for="attribute_rectangle__{{../id}}_{{id}}" data-product-attribute-value="{{id}}">
+            <span class="variant-label">{{this.label}}</span>
         </label>
     {{/each}}
 </div>
